prusti-tests/tests/counterexamples/verify-fail/erdinm/traits-basic-norm-reqd-impl-post.rs
use prusti_contracts::*;

/* COUNTEREXAMPLE:
    fn Percentage.get(self):
        self <- Effective{},
        result <- 101
*/

trait Percentage {
    #[ensures(result <= 100)] //~ ERROR postcondition might not hold
    fn get(&self) -> u8;
}

struct Effective {}

impl Percentage for Effective {
    fn get(&self) -> u8 { // originates here
        101
    }
}

fn main() {}
